# sbmumc

./: workspace.json
sbmumc/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.distroless  Dockerfile.multiplatform  README.md  docker-compose.yml  workspace.json
sbmumc/.github/workflows/: aws.yml  azure.yml  ci.yml  contributing.yml  deploy.yml  documentation.yml  gcp.yml  maintenance.yml  modules.yml  monitoring.yml  omnidev-tests.yml  quality.yml  release.yml  security.yml
sbmumc/benches/: benchmarks.rs
sbmumc/cloud/aws/: ecs.yaml
sbmumc/cloud/azure/: containerapps.yaml
sbmumc/cloud/gcp/: cloudrun.yaml
sbmumc/config/: default.toml  offline.toml
sbmumc/docs/: SBMUMC_BOOK.md  SBMUMC_Complete_Guide.md
sbmumc/integrations/: README.md
sbmumc/integrations/common/: lsp_protocol.rs
sbmumc/integrations/github/: action.yml
sbmumc/integrations/vscode/: package.json
sbmumc/k8s/: deployment.yaml
sbmumc/k8s/helm/: values.yaml
sbmumc/scripts/: build-docker.sh  deploy.sh
sbmumc/src/: lib.rs  main.rs
sbmumc/src/2d_materials/: mod.rs
sbmumc/src/abstract_algebra/: mod.rs
sbmumc/src/additive_manufacturing/: mod.rs
sbmumc/src/adiabatic_quantum/: mod.rs
sbmumc/src/admin/: mod.rs
sbmumc/src/advanced_ceramics/: mod.rs
sbmumc/src/advanced_optimization/: mod.rs
sbmumc/src/aerospace_materials/: mod.rs
sbmumc/src/aesthetic_theory/: mod.rs
sbmumc/src/agency_consciousness/: mod.rs
sbmumc/src/agi/: mod.rs
sbmumc/src/agi_solver/: mod.rs
sbmumc/src/ai_assistant/: mod.rs
sbmumc/src/ai_generation/: mod.rs
sbmumc/src/api/: mod.rs
sbmumc/tests/: integration_tests.rs
(+1452 files in other folders)
