[package]
name = "sbmumc"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Benwellonedge Mukandara"]
description = "Samuel Benwellonedge Mukandara Universal Meta-Compiler (SBMUMC) - A comprehensive AGI system and universal compiler framework"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# UUID for entity identification
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hash maps with random state
indexmap = { version = "2.2", features = ["serde"] }

# Lock-free data structures
parking_lot = "0.12"

# Once cell for lazy initialization
once_cell = "1.19"

# Regex for pattern matching
regex = "1.10"

# URL handling
url = "2.5"

# File watching
notify = "6.1"

# Encoding detection
charset = "0.2"
encoding_rs = "0.8"

# Async channels
flume = "0.11"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"

[[bin]]
name = "sbmumc"
path = "src/main.rs"

[lib]
name = "sbmumc"
path = "src/lib.rs"

[features]
default = ["full"]
full = ["compiler", "agi", "security", "admin", "distributed"]
compiler = []
agi = []
security = []
admin = []
distributed = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
